# files-proxy-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  run  rustfmt.toml  仕様書.md
.github/workflows/: docker-publish.yml
agent/: Cargo.toml  Dockerfile  config.json  docker-example.sh
agent/src/: main.rs
server/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
server/docker-config/: config.json
server/src/: agent.rs  http.rs  main.rs
src/: agent.rs  commands.rs  http.rs  main.rs
