[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "*"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["io"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = {version="^1.0.164",features=["derive"]}
serde_json ="1"
sqlx = { version = "0.7", features = [ "runtime-tokio" ,"postgres" ] }
