[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Kozakura <@kozakura@misskey.kzkr.xyz>"]
license = "MIT OR Apache-2.0"
description = "cherrypick rmote files proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"

